fix recent posts and fix text in gemini-fluuter-env.md

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -264,8 +264,8 @@ params:
 
   footer:
     recentPosts:
-      path: "../../blogs"
-      count: 3
+      path: "blogs"
+      count: 5
       title: "Recent Posts"
       enable: true
       disableFeaturedImage: false
