--- a/hugo.yaml
+++ b/hugo.yaml
@@ -300,4 +300,20 @@ params:
     article: "Jan 2, 2006"
     articleList: "Jan 2, 2006"
     articleRecent: "Jan 2, 2006"
---- 
+
+  giscus:
+    enable: true
+    data-repo: "diogolongo/diogolongo.github.io"
+    data-repo-id: "MDEwOlJlcG9zaXRvcnkxNzY2MDYzMTc="
+    data-category: "Announcements"
+    data-category-id: "DIC_kwDOCobMbc4CzxvQ"
+    data-mapping: "pathname"
+    data-strict: "0"
+    data-reactions-enabled: "1"
+    data-emit-metadata: "0"
+    data-input-position: "top"
+    data-theme: "preferred_color_scheme"
+    data-lang: "en"
+    data-loading: "lazy"
+    crossorigin: "anonymous"
+---
