--- a/hugo.yaml
+++ b/hugo.yaml
@@ -303,17 +303,17 @@ params:
 
   giscus:
     enable: true
-    data-repo: "diogolongo/diogolongo.github.io"
-    data-repo-id: "MDEwOlJlcG9zaXRvcnkxNzY2MDYzMTc="
-    data-category: "Announcements"
-    data-category-id: "DIC_kwDOCobMbc4CzxvQ"
-    data-mapping: "pathname"
-    data-strict: "0"
-    data-reactions-enabled: "1"
-    data-emit-metadata: "0"
-    data-input-position: "top"
-    data-theme: "preferred_color_scheme"
-    data-lang: "en"
-    data-loading: "lazy"
+    datarepo: "diogolongo/diogolongo.github.io"
+    datarepoid: "MDEwOlJlcG9zaXRvcnkxNzY2MDYzMTc="
+    datacategory: "Announcements"
+    datacategoryid: "DIC_kwDOCobMbc4CzxvQ"
+    datamapping: "pathname"
+    datastrict: "0"
+    datareactionsenabled: "1"
+    dataemitmetadata: "0"
+    datainputposition: "top"
+    datatheme: "preferred_color_scheme"
+    datalang: "en"
+    dataloading: "lazy"
     crossorigin: "anonymous"
 ---
